--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 150px;
+  height: 50vh;
   margin-top: 20px;
   min-width: 100%;
   background-color: white;
