--- a/src/index.css
+++ b/src/index.css
@@ -131,7 +131,7 @@ body {
     width: 70px;
     font-size: 10px;
   }
-  .button-container button {
+  .button-container button:active {
     background-color: rgb(236, 236, 189);
   }
 }
